Completed Film model mapping Add further fields in getallfilms API